@@ -8,6 +8,8 @@ propellor (5.3.0) UNRELEASED; urgency=medium
   * Added rawPartition to PartSpec, for specifying partitions with no
     filesystem.
   * Added BiosGrubFlag to PartFlag.
+  * Run su with --login, to avoid inheriting some problematic environment
+    variables, such as TMP, from the caller.
 
  -- Joey Hess <id@joeyh.name>  Tue, 02 Jan 2018 13:06:45 -0400
 
